internal/kgateway/translator/gateway/testutils/inputs/gateway-per-conn-buf-lim/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
  annotations:
    kgateway.dev/per-connection-buffer-limit: 64Ki
spec:
  gatewayClassName: example-gateway-class
  listeners:
  - name: http
    protocol: HTTP
    port: 80
  - name: http2
    protocol: HTTP
    port: 3000
---
